tests/jsx_type_args/jsx_type_args.exp
Error ---------------------------------------------------------------------------------------------------- test.js:21:66

Cannot create `ComponentMultipleArgs` element because boolean [1] is incompatible with string [2] in type argument `T`.
[incompatible-type-arg]

   test.js:21:66
   21| <ComponentMultipleArgs<string, number, boolean> r="foo" s={1} t={true} />; // error: bool ~> string
                                                                        ^^^^ [1]

References:
   test.js:12:49
   12| declare function ComponentMultipleArgs<R, S, T: string>({
                                                       ^^^^^^ [2]



Found 1 error
